<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ltd.getman.testjobproject.presentation.activities.MainActivity"
    >

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_cars_count"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:hint="@string/cars_count_hint"
      android:inputType="number"
      />

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_planes_count"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintTop_toBottomOf="@+id/et_cars_count"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:hint="@string/planes_count_hint"
      android:inputType="number"
      />

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_ships_count"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintTop_toBottomOf="@+id/et_planes_count"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:hint="@string/ships_count_hint"
      android:inputType="number"
      />

  <RadioGroup
      android:id="@+id/rg_sort"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintTop_toBottomOf="@+id/et_ships_count"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:gravity="center"
      >
    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/rb_bubble_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bubble_sort"
        />

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/rb_quick_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_sort"
        />

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/rb_insertion_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertion_sort"
        />
  </RadioGroup>

  <Button
      android:id="@+id/btn_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_text"
      android:layout_marginTop="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rg_sort"
      />

  <ProgressBar
      android:id="@+id/progress"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginTop="24dp"
      app:layout_constraintLeft_toLeftOf="@+id/btn_start"
      app:layout_constraintRight_toRightOf="@+id/btn_start"
      app:layout_constraintTop_toBottomOf="@+id/btn_start"
      android:visibility="gone"
      />

  <include layout="@layout/placeholder_empty_list"/>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_data"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="24dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_start"
      />

</android.support.constraint.ConstraintLayout>
